--- a/projects.html
+++ b/projects.html
@@ -5,13 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/main.css" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-WP8Y026WHC"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-WP8Y026WHC");
+    </script>
     <title>Document</title>
   </head>
   <body>
     <header>
       <section class="header-container">
         <a href="index.html" class="header-logo">TA</a>
-        <input type="checkbox" id="toggleMenu">
+        <input type="checkbox" id="toggleMenu" />
         <nav class="header-nav">
           <label class="navbar-toggle" for="toggleMenu">
             <span class="burgerLayer"></span>
@@ -32,7 +46,9 @@
         <table>
           <tbody>
             <tr>
-              <td colspan="2"><h2 class="pourletel">Magnetic-powered train</h2></td>
+              <td colspan="2">
+                <h2 class="pourletel">Magnetic-powered train</h2>
+              </td>
               <td class="invisible"><h2>Magnetic-powered train</h2></td>
             </tr>
             <tr>
@@ -76,7 +92,9 @@
         <table>
           <tbody>
             <tr>
-              <td colspan="2"><h2 class="pourletel">Facial Recognition Software</h2></td>
+              <td colspan="2">
+                <h2 class="pourletel">Facial Recognition Software</h2>
+              </td>
               <td class="invisible"><h2>Facial Recognition Software</h2></td>
             </tr>
             <tr>
@@ -115,7 +133,9 @@
         <table>
           <tbody>
             <tr>
-              <td colspan="2"><h2 class="pourletel">Website for beekeepers</h2></td>
+              <td colspan="2">
+                <h2 class="pourletel">Website for beekeepers</h2>
+              </td>
               <td class="invisible"><h2>Website for beekeepers</h2></td>
             </tr>
             <tr>
