--- a/projects.html
+++ b/projects.html
@@ -1,27 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script
-  async
-  src="https://www.googletagmanager.com/gtag/js?id=G-WP8Y026WHC"
-></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() {
-    dataLayer.push(arguments);
-  }
-  gtag("js", new Date());
-
-  gtag("config", "G-WP8Y026WHC");
-</script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/main.css" />
     
-    <title>Document</title>
+    <title>Projects</title>
   </head>
-  <!-- Google tag (gtag.js) -->
   
   <body>
     <header>
