js timeout + html markup + css markup

--- a/contact.html
+++ b/contact.html
@@ -50,11 +50,11 @@
       <aside id="othercont">
         <p>I am currently based in Nantes, France.</p>
         <iframe
-          width="100%"
+          width="600"
           height="350"
           src="https://www.openstreetmap.org/export/embed.html?bbox=-1.658592224121094%2C47.15073491039044%2C-1.4110565185546877%2C47.26292215345572&amp;layer=mapnik"
           style="border: 1px solid rgb(255, 255, 255); border-radius: 10px"
-        ></iframe>
+        ></iframe>  
       </aside>
     </main>
     <hr />
@@ -87,5 +87,7 @@
       <p>last updated today</p>
       <a href="contact.html" id="phonecontact">Contact me !</a>
     </footer>
+
+
   </body>
 </html>
