--- a/projects.html
+++ b/projects.html
@@ -87,7 +87,7 @@
             </tr>
             <tr>
               <td>
-                <img src="images/farec.png" />
+                <img alt="The facial recognition software I built" src="images/farec.png" />
               </td>
               <td class="tabski">
                 <h3>Skills I used</h3>
@@ -128,7 +128,7 @@
             </tr>
             <tr>
               <td>
-                <img class="sanshadow" src="images/webbee2.png" />
+                <img alt="A screenshot of a website I made for beekeepers" class="sanshadow" src="images/webbee2.png" />
               </td>
               <td class="tabski">
                 <h3>Skills I used</h3>
